--- a/scripts/manual_validation_results.qmd
+++ b/scripts/manual_validation_results.qmd
@@ -162,13 +162,13 @@ summary_data3 <- discrepancy_data |>
   summarise(count = n(), .groups = 'drop') |>
   group_by(registry2) |>
   mutate(percent = count / sum(count) * 100) |>
-  mutate(label = paste0(round(percent, 1), "% (n = ", count, ")"))  # Update label to include count
+  mutate(label = paste0(round(percent, 1), "% (n = ", count, ")"))  
 
 #plot
 ggplot(data = summary_data3, aes(x = registry2, y = percent, fill = result_label)) +
   geom_bar(stat = "identity") +
   geom_text(aes(label = label), 
-            position = position_stack(vjust = 0.5), size = 3.5) +  # Use updated label
+            position = position_stack(vjust = 0.5), size = 3.5) +  
   labs(x = "Registry combination", y = "Percentage of Summary Results", fill = "Results") +
   scale_fill_manual(values = c("No results" = "lightgray", 
                                "Only EUCTR" = "#2066a8", 
@@ -281,13 +281,13 @@ summary_data5 <- discrepancy_data |>
   summarise(count = n(), .groups = 'drop') |>
   group_by(registry2) |>
   mutate(percent = count / sum(count) * 100) |>
-  mutate(label = paste0(round(percent, 1), "% (n = ", count, ")"))  # Update label to include count
+  mutate(label = paste0(round(percent, 1), "% (n = ", count, ")"))  
 
 #plot
 ggplot(data = summary_data5, aes(x = registry2, y = percent, fill = result_label)) +
   geom_bar(stat = "identity") +
   geom_text(aes(label = label), 
-            position = position_stack(vjust = 0.5), size = 3.5) +  # Use updated label
+            position = position_stack(vjust = 0.5), size = 3.5) + 
   labs(x = "Registry combination", y = "Percentage of Summary Results", fill = "Results") +
   scale_fill_manual(values = c("No results" = "lightgray", 
                                "Only EUCTR" = "#2066a8", 
@@ -720,4 +720,85 @@ discrepancy_data |>
 discrepancy_data |>
   filter(registry2 == "DRKS") |>
   count(completion_month_year_reg1 == completion_month_year_reg2)
+```
+
+### Version 3 combined plot
+
+```{r message = FALSE, warning = FALSE}
+
+completion_ctgov_plot <- discrepancy_data |>
+  filter(registry2 == "ClinicalTrials.gov") |>
+  filter(!is.na(completion_month_year_reg1) & !is.na(completion_month_year_reg2)) |>
+  filter(completion_month_year_reg1 != completion_month_year_reg2) |>
+  mutate(completion_month_year_reg1 = as.Date(paste0(completion_month_year_reg1, "-01"),
+                                              format = "%Y-%m-%d"),
+         completion_month_year_reg2 = as.Date(paste0(completion_month_year_reg2, "-01"),
+                                              format = "%Y-%m-%d"),
+         time_diff = abs(completion_month_year_reg2 - completion_month_year_reg1)) |>
+  arrange(time_diff) |>
+  mutate(trn1 = factor(trn1, levels = trn1)) |>
+  ggplot(aes(y = trn1, 
+             x = completion_month_year_reg1,
+             xend = completion_month_year_reg2)) +
+  geom_dumbbell(color = "darkgray",  
+                size = 1,            
+                dot_guide = FALSE,   
+                size_x = 3,          
+                size_xend = 3,       
+                colour_x = "#3594cc",     
+                colour_xend = "#8cc5e3") + 
+  theme_classic() +
+  theme(axis.text.y = element_blank(),
+        axis.ticks.y = element_blank(),
+        legend.position = "top") +  
+  labs(x = "Year of completion\n(EUCTR - ClinicalTrials.gov)",
+       y = "Pairs of cross-registered trials") +  
+  scale_x_date(date_breaks = "1 year", date_labels = "%Y") + #adding labels
+  geom_point(aes(x = as.Date(NA), y = NA, color = factor("EUCTR", levels = c("EUCTR", "ClinicalTrials.gov"))), size = 3) +
+  geom_point(aes(x = as.Date(NA), y = NA, color = factor("ClinicalTrials.gov", levels = c("EUCTR", "ClinicalTrials.gov"))), size = 3) +
+  scale_color_manual(name = "Registry",
+                     values = c("EUCTR" = "#3594cc", 
+                                "ClinicalTrials.gov" = "#8cc5e3"),
+                     labels = c("EUCTR", "Other registry")) +
+  guides(color = guide_legend(override.aes = list(size = 3)))
+
+completion_drks_plot <- discrepancy_data |>
+  filter(registry2 == "DRKS") |>
+  filter(!is.na(completion_month_year_reg1) & !is.na(completion_month_year_reg2)) |>
+  filter(completion_month_year_reg1 != completion_month_year_reg2) |>
+  mutate(completion_month_year_reg1 = as.Date(paste0(completion_month_year_reg1, "-01"),
+                                              format = "%Y-%m-%d"),
+         completion_month_year_reg2 = as.Date(paste0(completion_month_year_reg2, "-01"),
+                                              format = "%Y-%m-%d"),
+         time_diff = abs(completion_month_year_reg2 - completion_month_year_reg1)) |>
+  arrange(time_diff) |>
+  mutate(trn1 = factor(trn1, levels = trn1)) |>
+  ggplot(aes(y = trn1, 
+             x = completion_month_year_reg1,
+             xend = completion_month_year_reg2)) +
+  geom_dumbbell(color = "darkgray",  
+                size = 1,            
+                dot_guide = FALSE,   
+                size_x = 3,          
+                size_xend = 3,       
+                colour_x = "#3594cc",     
+                colour_xend = "#8cc5e3") + 
+  theme_classic() +
+  theme(axis.text.y = element_blank(),
+        axis.ticks.y = element_blank(),
+        legend.position = "none") +  
+  labs(x = "Year of completion\n(EUCTR - DRKS)",
+       y = "Pairs of cross-registered trials") +  
+  scale_x_date(date_breaks = "1 year", date_labels = "%Y") + #adding labels
+  geom_point(aes(x = as.Date(NA), y = NA, color = factor("EUCTR", levels = c("EUCTR", "DRKS"))), size = 3) +
+  geom_point(aes(x = as.Date(NA), y = NA, color = factor("DRKS", levels = c("EUCTR", "DRKS"))), size = 3) +
+  scale_color_manual(name = "Registry",
+                     values = c("EUCTR" = "#3594cc", 
+                                "DRKS" = "#8cc5e3"),
+                     labels = c("EUCTR", "Other registry")) +
+  guides(color = guide_legend(override.aes = list(size = 3)))
+
+#combined plot
+completion_combined_plot <- completion_ctgov_plot + completion_drks_plot + plot_layout(nrow =  2)
+print(completion_combined_plot)
 ```
