--- a/scripts/manual_validation_results.qmd
+++ b/scripts/manual_validation_results.qmd
@@ -802,3 +802,95 @@ completion_drks_plot <- discrepancy_data |>
 completion_combined_plot <- completion_ctgov_plot + completion_drks_plot + plot_layout(nrow =  2)
 print(completion_combined_plot)
 ```
+
+### Combined plot with all observations
+
+```{r message = FALSE, warning = FALSE}
+
+#plot for clinical trials, with addition of new layers for the matching observations
+all_obs_ctgov <- discrepancy_data |>
+  filter(registry2 == "ClinicalTrials.gov") |>
+  filter(!is.na(completion_month_year_reg1) & !is.na(completion_month_year_reg2)) |>
+  mutate(completion_month_year_reg1 = as.Date(paste0(completion_month_year_reg1, "-01"), format = "%Y-%m-%d"),
+         completion_month_year_reg2 = as.Date(paste0(completion_month_year_reg2, "-01"), format = "%Y-%m-%d"),
+         time_diff = abs(completion_month_year_reg2 - completion_month_year_reg1),
+         is_equal = completion_month_year_reg1 == completion_month_year_reg2) |>
+  arrange(time_diff) |>
+  mutate(trn1 = factor(trn1, levels = trn1)) |>
+  ggplot(aes(y = trn1, 
+             x = completion_month_year_reg1,
+             xend = completion_month_year_reg2)) +
+  geom_dumbbell(color = "darkgray",  
+                size = 1,            
+                dot_guide = FALSE,   
+                size_x = 3,          
+                size_xend = 3,       
+                colour_x = "#3594cc",     
+                colour_xend = "#8cc5e3") + 
+  geom_point(data = . %>% filter(is_equal),
+             aes(x = completion_month_year_reg1, shape = "Both match"),
+             color = "#e79f31", 
+             size = 3.3) +
+  theme_classic() +
+  theme(axis.text.y = element_blank(),
+        axis.ticks.y = element_blank(),
+        legend.position = "top") +  
+  labs(x = "Year of completion\n(EUCTR - ClinicalTrials.gov)",
+       y = "Pairs of cross-registered trials") +  
+  scale_x_date(date_breaks = "1 year", date_labels = "%Y") +
+  geom_point(aes(x = as.Date(NA), y = NA, color = factor("EUCTR", levels = c("EUCTR", "ClinicalTrials.gov"))), size = 3) +
+  geom_point(aes(x = as.Date(NA), y = NA, color = factor("ClinicalTrials.gov", levels = c("EUCTR", "ClinicalTrials.gov"))), size = 3) +
+  scale_color_manual(name = "Registry",
+                     values = c("EUCTR" = "#3594cc", 
+                                "ClinicalTrials.gov" = "#8cc5e3"),
+                     labels = c("EUCTR", "Other registry")) +
+  scale_shape_manual(values = c("Both match" = 16), labels = c("Both match" = "Both match")) +
+  guides(color = guide_legend(order = 1, override.aes = list(size = 3)),
+         shape = guide_legend(order = 2, title = NULL))
+
+#plot for drks without adding the labels but with the new color layer: 
+all_obs_drks <- discrepancy_data |>
+  filter(registry2 == "DRKS") |>
+  filter(!is.na(completion_month_year_reg1) & !is.na(completion_month_year_reg2)) |>
+  mutate(completion_month_year_reg1 = as.Date(paste0(completion_month_year_reg1, "-01"), format = "%Y-%m-%d"),
+         completion_month_year_reg2 = as.Date(paste0(completion_month_year_reg2, "-01"), format = "%Y-%m-%d"),
+         time_diff = abs(completion_month_year_reg2 - completion_month_year_reg1),
+         is_equal = completion_month_year_reg1 == completion_month_year_reg2) |>
+  arrange(time_diff) |>
+  mutate(trn1 = factor(trn1, levels = trn1)) |>
+  ggplot(aes(y = trn1, 
+             x = completion_month_year_reg1,
+             xend = completion_month_year_reg2)) +
+  geom_dumbbell(color = "darkgray",  
+                size = 1,            
+                dot_guide = FALSE,   
+                size_x = 3,          
+                size_xend = 3,       
+                colour_x = "#3594cc",     
+                colour_xend = "#8cc5e3") + 
+  geom_point(data = . %>% filter(is_equal),
+             aes(x = completion_month_year_reg1),
+             shape = 16,  
+             color = "#e79f31", 
+             size = 3.3) +
+  theme_classic() +
+  theme(axis.text.y = element_blank(),
+        axis.ticks.y = element_blank(),
+        legend.position = "none") +  
+  labs(x = "Year of completion\n(EUCTR - DRKS)",
+       y = "Pairs of cross-registered trials") +  
+  scale_x_date(date_breaks = "1 year", date_labels = "%Y") +
+  geom_point(aes(x = as.Date(NA), y = NA, color = factor("EUCTR", levels = c("EUCTR", "DRKS"))), size = 3) +
+  geom_point(aes(x = as.Date(NA), y = NA, color = factor("DRKS", levels = c("EUCTR", "DRKS"))), size = 3) +
+  scale_color_manual(name = "Registry",
+                     values = c("EUCTR" = "#3594cc", 
+                                "DRKS" = "#8cc5e3"),
+                     labels = c("EUCTR", "Other registry")) +
+  guides(color = guide_legend(override.aes = list(size = 3)))
+
+#combine plot
+completion_combined_plot2 <- all_obs_ctgov + all_obs_drks + plot_layout(nrow =  2)
+print(completion_combined_plot2)
+
+#ggsave("~/Desktop/Research group Strech/cross_reg_figures/all_obs_completion_combined_plot.png", plot = completion_combined_plot2, width = 12, height = 15, dpi = 300)
+```
