--- a/scripts/manual_validation_results.qmd
+++ b/scripts/manual_validation_results.qmd
@@ -13,6 +13,7 @@ editor: visual
 final_data <- read.csv(here::here("data", "manual_validation_processed.csv"), sep = ",")
 
 library(tidyverse)
+library(stringr)
 library(patchwork)
 library(networkD3)
 library(highcharter)
@@ -49,7 +50,70 @@ final_data |>
   mutate(percentage = round(n / sum(n) * 100, 2))
 ```
 
-# Discrepancy analysis
+## Count for Table 2
+
+This section presents the number of pairs by registry (EUCTR-ClinicalTrials.gov or EUCTR-DRKS) through all the stages (suspected cross-registrations, manually screened cross-registrations and validated cross-registrations.
+
+```{r message = FALSE, warning = FALSE}
+
+trn_trn_table <- readRDS("~/Desktop/Research group Strech/cross-registration/official manual checks (11.09)/trn_manual_checks_11_09_2024.rds")
+```
+
+### Overall suspected cross-registratios (n = 625)
+
+```{r message = FALSE, warning = FALSE}
+
+filtered_table <- trn_trn_table |>
+  filter(priority >= 1 & priority <= 4,
+         drks_removed == FALSE,
+         euctr_id_in_euctr == TRUE,
+         trn2 != "2008-004408-29")
+
+filtered_table |>
+  filter(str_starts(trn1, "DRKS")) |>
+  count(priority, name = "DRKS_count")
+
+filtered_table |>
+  filter(str_starts(trn2, "DRKS")) |>
+  count(priority, name = "DRKS_count")
+
+filtered_table |>
+  filter(str_starts(trn1, "NCT")) |>
+  count(priority, name = "NCT_count")
+
+filtered_table |>
+  filter(str_starts(trn2, "NCT")) |>
+  count(priority, name = "NCT_count")
+```
+
+**Priority 1:** 9 DRKS, 100 NCT (109 total)
+
+**Priority 2:** 51 DRKS, 310 NCT (361 total)
+
+**Priority 3:** 1 DRKS, 124 NCT (125 total)
+
+**Priority 4:** 1 DRKS, 29 NCT (30 total)
+
+### Manually screened cross-registrations (n = 242)
+
+```{r message = FALSE, warning = FALSE}
+
+final_data |>
+  group_by(priority) |>
+  count(registry2)
+```
+
+### Validated cross-registrations (n = 233)
+
+```{r message = FALSE, warning = FALSE}
+
+final_data |>
+  filter(is_true_crossreg == "TRUE") |>
+  group_by(priority) |>
+  count(registry2)
+```
+
+# Discrepancy analysis count
 
 These analyses are going to be conducted in only the pairs that were considered `TRUE` cross-registrations
 
@@ -58,6 +122,235 @@ These analyses are going to be conducted in only the pairs that were considered 
 discrepancy_data <- final_data |>
   filter(is_true_crossreg == "TRUE")
 ```
+
+## Summary results
+
+This analysis was limited to confirmed cross-registrations with a "Complete" recruitment status in both registries
+
+```{r message = FALSE, warning = FALSE}
+
+discrepancy_data |>
+  filter(overall_recruitment_status_reg1 == "Completed",
+         overall_recruitment_status_reg2 == "Completed") |>
+  count(registry2)
+```
+
+The analysis was conducted on 200 observations, from which 186 were EUCTR-ClinicalTrials.gov pairs, and 14 were EUCTR-DRKS pairs. No missing data was found in `has_summary_results`, for both main and sensitivity analyses.
+
+### Percentages main analysis
+
+```{r}
+
+#overall
+discrepancy_data |>
+  filter(overall_recruitment_status_reg1 == "Completed",
+         overall_recruitment_status_reg2 == "Completed") |>
+  mutate(result_label = case_when(
+    has_summary_results_reg1_main == FALSE & has_summary_results_reg2_main == FALSE ~ "No results",
+    has_summary_results_reg1_main == TRUE & has_summary_results_reg2_main == FALSE ~ "Only EUCTR",
+    has_summary_results_reg1_main == TRUE & has_summary_results_reg2_main == TRUE ~ "Both",
+    has_summary_results_reg1_main == FALSE & has_summary_results_reg2_main == TRUE ~ "Other registry"),
+    result_label = factor(result_label, levels = c("Other registry", "Both", "Only EUCTR", "No results"))) |>
+  group_by(result_label) |>
+  summarise(count = n(), .groups = 'drop') |>
+  mutate(percentage = count / sum(count) * 100) |>
+  mutate(label = paste0(count, " (", round(percentage, 1), "%)"))
+
+#ClinicalTrials.gov
+discrepancy_data |>
+  filter(overall_recruitment_status_reg1 == "Completed",
+         overall_recruitment_status_reg2 == "Completed",
+         registry2 == "ClinicalTrials.gov") |>
+  mutate(result_label = case_when(
+    has_summary_results_reg1_main == FALSE & has_summary_results_reg2_main == FALSE ~ "No results",
+    has_summary_results_reg1_main == TRUE & has_summary_results_reg2_main == FALSE ~ "Only EUCTR",
+    has_summary_results_reg1_main == TRUE & has_summary_results_reg2_main == TRUE ~ "Both",
+    has_summary_results_reg1_main == FALSE & has_summary_results_reg2_main == TRUE ~ "Other registry"),
+    result_label = factor(result_label, levels = c("Other registry", "Both", "Only EUCTR", "No results"))) |>
+  group_by(result_label) |>
+  summarise(count = n(), .groups = 'drop') |>
+  mutate(percentage = count / sum(count) * 100) |>
+  mutate(label = paste0(count, " (", round(percentage, 1), "%)"))
+
+#DRKS
+discrepancy_data |>
+  filter(overall_recruitment_status_reg1 == "Completed",
+         overall_recruitment_status_reg2 == "Completed",
+         registry2 == "DRKS") |>
+  mutate(result_label = case_when(
+    has_summary_results_reg1_main == FALSE & has_summary_results_reg2_main == FALSE ~ "No results",
+    has_summary_results_reg1_main == TRUE & has_summary_results_reg2_main == FALSE ~ "Only EUCTR",
+    has_summary_results_reg1_main == TRUE & has_summary_results_reg2_main == TRUE ~ "Both",
+    has_summary_results_reg1_main == FALSE & has_summary_results_reg2_main == TRUE ~ "Other registry"),
+    result_label = factor(result_label, levels = c("Other registry", "Both", "Only EUCTR", "No results"))) |>
+  group_by(result_label) |>
+  summarise(count = n(), .groups = 'drop') |>
+  mutate(percentage = count / sum(count) * 100) |>
+  mutate(label = paste0(count, " (", round(percentage, 1), "%)"))
+```
+
+### Percentages sensitivity analysis
+
+```{r message = FALSE, warning = FALSE}
+
+#overall
+discrepancy_data |>
+  filter(overall_recruitment_status_reg1 == "Completed",
+         overall_recruitment_status_reg2 == "Completed") |>
+  mutate(result_label = case_when(
+    has_summary_results_reg1_sensitivity == FALSE & has_summary_results_reg2_sensitivity == FALSE ~ "No results",
+    has_summary_results_reg1_sensitivity == TRUE & has_summary_results_reg2_sensitivity == FALSE ~ "Only EUCTR",
+    has_summary_results_reg1_sensitivity == TRUE & has_summary_results_reg2_sensitivity == TRUE ~ "Both",
+    has_summary_results_reg1_sensitivity == FALSE & has_summary_results_reg2_sensitivity == TRUE ~ "Other registry"),
+    result_label = factor(result_label, levels = c("Other registry", "Both", "Only EUCTR", "No results"))) |>
+  group_by(result_label) |>
+  summarise(count = n(), .groups = 'drop') |>
+  mutate(percentage = count / sum(count) * 100) |>
+  mutate(label = paste0(count, " (", round(percentage, 1), "%)"))
+
+#ClinicalTrials.gov
+discrepancy_data |>
+  filter(overall_recruitment_status_reg1 == "Completed",
+         overall_recruitment_status_reg2 == "Completed",
+         registry2 == "ClinicalTrials.gov") |>
+  mutate(result_label = case_when(
+    has_summary_results_reg1_sensitivity == FALSE & has_summary_results_reg2_sensitivity == FALSE ~ "No results",
+    has_summary_results_reg1_sensitivity == TRUE & has_summary_results_reg2_sensitivity == FALSE ~ "Only EUCTR",
+    has_summary_results_reg1_sensitivity == TRUE & has_summary_results_reg2_sensitivity == TRUE ~ "Both",
+    has_summary_results_reg1_sensitivity == FALSE & has_summary_results_reg2_sensitivity == TRUE ~ "Other registry"),
+    result_label = factor(result_label, levels = c("Other registry", "Both", "Only EUCTR", "No results"))) |>
+  group_by(result_label) |>
+  summarise(count = n(), .groups = 'drop') |>
+  mutate(percentage = count / sum(count) * 100) |>
+  mutate(label = paste0(count, " (", round(percentage, 1), "%)"))
+
+#DRKS
+discrepancy_data |>
+  filter(overall_recruitment_status_reg1 == "Completed",
+         overall_recruitment_status_reg2 == "Completed",
+         registry2 == "DRKS") |>
+  mutate(result_label = case_when(
+    has_summary_results_reg1_sensitivity == FALSE & has_summary_results_reg2_sensitivity == FALSE ~ "No results",
+    has_summary_results_reg1_sensitivity == TRUE & has_summary_results_reg2_sensitivity == FALSE ~ "Only EUCTR",
+    has_summary_results_reg1_sensitivity == TRUE & has_summary_results_reg2_sensitivity == TRUE ~ "Both",
+    has_summary_results_reg1_sensitivity == FALSE & has_summary_results_reg2_sensitivity == TRUE ~ "Other registry"),
+    result_label = factor(result_label, levels = c("Other registry", "Both", "Only EUCTR", "No results"))) |>
+  group_by(result_label) |>
+  summarise(count = n(), .groups = 'drop') |>
+  mutate(percentage = count / sum(count) * 100) |>
+  mutate(label = paste0(count, " (", round(percentage, 1), "%)"))
+```
+
+## Recruitment status
+
+This analysis was limited to confirmed cross-registrations with a recruitment status present in both registries, and according to our mapping (`overall_recruitment_status_reg1` and `overall_recruitment_status_reg2`).
+
+```{r message = FALSE, warning = FALSE}
+
+discrepancy_data |>
+  count(overall_recruitment_status_reg1,
+        overall_recruitment_status_reg2) |>
+  mutate(percentage = round(n / sum(n) * 100, 0))
+```
+
+Since there is no missing data on either registry, the analysis was done on 233 pairs of true cross-registered pairs.
+
+```{r message = FALSE, warning = FALSE}
+
+discrepancy_data |>
+  count(registry2) |>
+  mutate(percentage = round(n / sum(n) * 100, 0))
+```
+
+Of those 233 pairs, 218 were EUCTR-ClinicalTrials.gov and 15 were EUCTR-DRKS
+
+```{r message = FALSE, warning = FALSE}
+
+discrepancy_data |>
+  filter(registry2 == "ClinicalTrials.gov") |>
+  count(overall_recruitment_status_reg1,
+        overall_recruitment_status_reg2) |>
+  mutate(percentage = round(n / sum(n) * 100, 0))
+
+discrepancy_data |>
+  filter(registry2 == "DRKS") |>
+  count(overall_recruitment_status_reg1,
+        overall_recruitment_status_reg2) |>
+  mutate(percentage = round(n / sum(n) * 100, 0))
+```
+
+## Completion date
+
+### Count of observations included in the analysis
+
+This is limited to confirmed cross-registrations with a date in both registries (i.e. when we had missing data in one or more registries, this was excluded from the analysis).
+
+```{r message = FALSE, warning = FALSE}
+
+discrepancy_data |>
+  count(is.na(completion_month_year_reg1))
+
+discrepancy_data |>
+  count(is.na(completion_month_year_reg2))
+```
+
+For registry1 (EUCTR), there were 210 pairs that were confirmed cross-registrations and no missing data on completion-date. For registry 2 (ClinicalTrials.gov or DRKS), the 233 observations had data. Therefore, the analysis was conducted in 210 pairs.
+
+```{r message = FALSE, warning = FALSE}
+
+discrepancy_data |>
+  filter(registry2 == "ClinicalTrials.gov") |>
+  count(is.na(completion_month_year_reg1))
+
+discrepancy_data |>
+  filter(registry2 == "DRKS") |>
+  count(is.na(completion_month_year_reg1))
+```
+
+Of those 210 pairs, 196 were EUCTR-ClinicalTrials.gov and 14 were EUCTR-DRKS.
+
+### Percentages
+
+```{r message = FALSE, warning = FALSE}
+
+discrepancy_data |>
+  filter(!is.na(completion_month_year_reg1)) |>
+  count(completion_month_year_reg1 == completion_month_year_reg2) |>
+  mutate(percentage = round(n / sum(n) * 100, 0))
+
+discrepancy_data |>
+  filter(registry2 == "ClinicalTrials.gov") |>
+  filter(!is.na(completion_month_year_reg1)) |>
+  count(completion_month_year_reg1 == completion_month_year_reg2) |>
+  mutate(percentage = round(n / sum(n) * 100, 0))
+
+discrepancy_data |>
+  filter(registry2 == "DRKS") |>
+  filter(!is.na(completion_month_year_reg1)) |>
+  count(completion_month_year_reg1 == completion_month_year_reg2) |>
+  mutate(percentage = round(n / sum(n) * 100, 0))
+```
+
+### Descriptive statistics of month differences
+
+```{r message = FALSE, warning = FALSE}
+
+discrepancy_data |>
+  filter(!is.na(completion_month_year_reg1)) |>
+  mutate(
+    completion_month_year_reg1 = ymd(paste0(completion_month_year_reg1, "-01")),
+    completion_month_year_reg2 = ymd(paste0(completion_month_year_reg2, "-01")),
+    month_difference = abs(interval(completion_month_year_reg1, 
+                                    completion_month_year_reg2) / months(1))
+    ) |>
+  summarize(min_difference = min(month_difference, na.rm = TRUE),  
+            max_difference = max(month_difference, na.rm = TRUE),
+            median_difference = median(month_difference, na.rm = TRUE),  
+            mean_difference = mean(month_difference, na.rm = TRUE),      
+            sd_difference = sd(month_difference, na.rm = TRUE))
+```
+
+# Discrepancy analysis figures
 
 ## Summary results - main analysis
 
@@ -891,6 +1184,4 @@ all_obs_drks <- discrepancy_data |>
 #combine plot
 completion_combined_plot2 <- all_obs_ctgov + all_obs_drks + plot_layout(nrow =  2)
 print(completion_combined_plot2)
-
-#ggsave("~/Desktop/Research group Strech/cross_reg_figures/all_obs_completion_combined_plot.png", plot = completion_combined_plot2, width = 12, height = 15, dpi = 300)
 ```
